# betterfileio

./: .gitmodules  CMakeLists.txt  README.md  bfio.cpp  bfio.h  main.cpp
